# git-remote-get

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  release-please-config.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  release.yml  test-and-lint.yml
gget/: __init__.py  _get_remote_file.py  cli.py
gget/platform/: __init__.py  _dirent.py  _get_provider.py  _provider.py  _repository.py
gget/platform/github/: __init__.py  _dirent.py  _provider.py  _repository.py
gget/writer/: __init__.py  _writer.py
terraform/: .gitignore  main.tf  provider.tf  variables.tf
tests/: test_gget.py
